* improved proxying of classes that are boot delegated outside the OSGi environment
* error handling is delegated to the multicaster unless debug is on
* improved type filtering for tracked services 

Package org.springframework.osgi.extender
* added support for disabling the ApplicationContext error handler through extender configuration
* added support for install.context.error.handler property

Package org.springframework.osgi.service
* removed deprecated retryTimes parameter in OsgiServiceProxyFactoryBean
* improved type filtering for tracked services


Changes in version 1.2.0 M2 (2008-11-24)
----------------------------------------

General
* upgraded to Spring Framework 2.5.6
* raised required Spring Framework version to 2.5.6
* upgraded to Knopflerfish 2.1.1
* aligned bundle symbolic names to Spring convention (changed prefix org.springframework.bundle.osgi. to 
  org.springframework.osgi. )
* added support for compendium namespace (managed-service, config-properties)
* incremented version of spring-osgi.xsd and spring-osgi-compendium.xsd

Package org.springframework.osgi.context
* removed deprecated method AbstractDelegatedExecutionApplicationContext#getContextClassLoader
* introduced dedicated PostProcessor interfaces aware of DelegatedExecutionOsgiBundleApplicationContext's multi-stage
  refresh

Package org.springframework.osgi.extender
* improved shutdown algorithm to deal with self-referenced and transitive service references

Package org.springframework.osgi.io
* improved existence check for bundle resources
* fixed manifest headers parsing problem when dealing with nested whitespaces
* fixed handling of optional required bundles
* improved OsgiBundlePatternMatchingResolver to return ContextResources
* changed OsgiBundlePatternMatchingResolver#findResources(String) visibility to protected

Package org.springframework.osgi.service
* refined single service proxies so that any waiting activity is interrupted on destruction